// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityFeedHeader renders header with all props defined 1`] = `
.c2 {
  color: #0b0c0c;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 24px;
  line-height: 1.0416666666666667;
  display: block;
  margin-top: 0;
  margin-bottom: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  border-bottom: 2px solid #000;
  margin-bottom: 10px;
  padding-bottom: 5px;
}

.c0 > div {
  width: 100%;
  margin-bottom: 5px;
}

.c1 {
  margin-top: 5px;
}

.c1 > h2 {
  font-weight: normal;
  font-size: 28px;
  margin-bottom: 0;
}

.c3 {
  text-align: right;
  min-width: 60%;
}

.c3 > button {
  margin-bottom: 0;
}

.c5 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  width: 100%;
  margin-top: 0;
  padding: 7px 10px;
  border: 2px solid transparent;
  border-radius: 0;
  color: #000;
  background-color: #dee0e2;
  box-shadow: 0 2px 0 #b5babe;
  text-align: center;
  vertical-align: top;
  cursor: pointer;
  -webkit-appearance: none;
  margin-bottom: 22px;
}

.c5:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.c5:link,
.c5:visited,
.c5:active,
.c5:hover {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5::-moz-focus-inner {
  padding: 0;
  border: 0;
}

.c5:hover,
.c5:focus {
  background-color: #d0d3d6;
}

.c5:active {
  top: 2px;
  box-shadow: none;
}

.c5::before {
  content: "";
  display: block;
  position: absolute;
  top: -2px;
  right: -2px;
  bottom: -4px;
  left: -2px;
  background: transparent;
}

.c5:active::before {
  top: -4px;
}

.c5:disabled {
  opacity: 0.5;
  background: #dee0e2;
}

.c5:disabled:hover {
  background-color: #dee0e2;
  cursor: default;
}

.c5:disabled:focus {
  outline: none;
}

.c5:disabled:active {
  top: 0;
  box-shadow: 0 2px 0 #b5babe;
}

.c5 svg {
  max-width: 15px;
}

.c4 {
  margin-bottom: 0;
  margin-top: 15px;
}

@media print {
  .c2 {
    color: #000;
  }
}

@media print {
  .c2 {
    font-size: 24px;
    line-height: 1.05;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    font-size: 36px;
    line-height: 1.1111111111111112;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    margin-bottom: 30px;
  }
}

@media only screen and (min-width:641px) {
  .c0 > div {
    width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

@media print {
  .c5 {
    font-size: 14px;
    line-height: 19px;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    font-size: 19px;
    line-height: 19px;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    width: auto;
  }
}

@media only screen and (min-width:641px) {
  .c5 svg {
    margin-left: 10px;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    margin-bottom: 32px;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    margin-left: 15px;
    margin-top: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
      size="LARGE"
    >
      999 activities
    </h2>
  </div>
  <div
    className="c3"
  >
    <a
      className="c4 c5"
      disabled={false}
      href="http://testing.example.com"
    >
      Test button
    </a>
  </div>
</div>
`;

exports[`ActivityFeedHeader renders header with one activity 1`] = `
.c2 {
  color: #0b0c0c;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 24px;
  line-height: 1.0416666666666667;
  display: block;
  margin-top: 0;
  margin-bottom: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  border-bottom: 2px solid #000;
  margin-bottom: 10px;
  padding-bottom: 5px;
}

.c0 > div {
  width: 100%;
  margin-bottom: 5px;
}

.c1 {
  margin-top: 5px;
}

.c1 > h2 {
  font-weight: normal;
  font-size: 28px;
  margin-bottom: 0;
}

@media print {
  .c2 {
    color: #000;
  }
}

@media print {
  .c2 {
    font-size: 24px;
    line-height: 1.05;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    font-size: 36px;
    line-height: 1.1111111111111112;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    margin-bottom: 30px;
  }
}

@media only screen and (min-width:641px) {
  .c0 > div {
    width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
      size="LARGE"
    >
      1 activity
    </h2>
  </div>
</div>
`;

exports[`ActivityFeedHeader renders header without props 1`] = `
.c2 {
  color: #0b0c0c;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 24px;
  line-height: 1.0416666666666667;
  display: block;
  margin-top: 0;
  margin-bottom: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  border-bottom: 2px solid #000;
  margin-bottom: 10px;
  padding-bottom: 5px;
}

.c0 > div {
  width: 100%;
  margin-bottom: 5px;
}

.c1 {
  margin-top: 5px;
}

.c1 > h2 {
  font-weight: normal;
  font-size: 28px;
  margin-bottom: 0;
}

@media print {
  .c2 {
    color: #000;
  }
}

@media print {
  .c2 {
    font-size: 24px;
    line-height: 1.05;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    font-size: 36px;
    line-height: 1.1111111111111112;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    margin-bottom: 30px;
  }
}

@media only screen and (min-width:641px) {
  .c0 > div {
    width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
      size="LARGE"
    >
      Activities
    </h2>
  </div>
</div>
`;
